1998-06-24  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* client-src/sendsize.c (getsize_dump): always create pipe for
 	killpgrp.

	* client-src/amandad.c (sendnak): report `UNKNOWN' error if str is
	NULL.

	* amplot/amplot.awk: ignore `interface-state'
	Reported by Peter Walker <peter.walker@talarian.com>

1998-06-24 Alexandre Oliva <oliva@dcc.unicamp.br>

	* server-src/amrmtape.sh.in: enable verbose by default; implement -q 
 	for quiet.
	* man/amrmtape.8.in: ditto
	Suggested by Nick Hibma  <nick.hibma@jrc.it>
	
1998-06-24  Nick Hibma  <nick.hibma@jrc.it>

	* server-src/amrmtape.sh.in: better error reporting for incorrect
	database entries

1998-06-24  Dan Swartzendruber <dswartz@druber.com>
	
	* server-src/conffile.h (RESERVE): new keyword.
	* server-src/conffile.c (RESERVE): ditto.
	(getconf_seen): recognize "reserve" keyword.
	(getconf_int): return value of "reserve" keyword.
	(read_confline): parse "reserve" line.
	* server-src/driverio.h (reserved_space): new global
	* server-src/driver.c (main): compute holding disk space to reserve
 	for degraded dumps.
	(start_degraded_mode): if we haven't hit degraded mode reservation
 	limit, allow full dump.
	
1998-06-18  Blair Zajac <blair@gps.caltech.edu>

	* config/ltconfig: update to 1.2a
	* config/ltmain.sh: update to 1.2a
	* config/libtool/libtool.m4: update to 1.2a

1998-06-17  John R. Jackson  <jrj@purdue.edu>

	* server-src/dumper.c (write_tapeheader): comment out some variables
	to get rid of a compiler warning.

1998-06-15  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amadmin.c (bumpsize): write wrong equation for bump
	threshold.

1998-06-15  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* man/amanda.8.in: add info about the chunksize parameter
	of the holdingdisk.
	* man/amanda.8.in: add info about amstatus command

1998-06-13  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* common-src/Makefile.am (libamanda_version): updated
	* tape-src/Makefile.am (libtape_version): updated